# 1

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml  setup.bat  vision_proxy_server.py
.github/workflows/: release.yml
docs/: architecture.md  deployment.md  model_guide.md  slides.md
scripts/: auto-start.ps1  daemon.vbs  install.bat  install.sh  setup-permanent.ps1  start-all.bat  start.bat  start.sh
tests/: test_proxy.py  test_vision_model.py
