[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deepseek-vision-proxy"
version = "1.1.0"
description = "Let pure-text LLM APIs see images via local Ollama vision models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
]

[project.scripts]
vision-proxy = "vision_proxy_server:main"

[project.urls]
Homepage = "https://github.com/jqX1/1"
Issues = "https://github.com/jqX1/1/issues"
